refactor(Aluno): usar Collectors.toList() no consultarBoletim e implementar toString